# flamapp-ai-assignment

./: .gitignore  README.md
FlamAppAI/: settings.gradle.kts
FlamAppAI/app/: build.gradle.kts
FlamAppAI/app/src/androidTest/java/com/kartik/flamappai/: ExampleInstrumentedTest.kt
FlamAppAI/app/src/main/: AndroidManifest.xml
FlamAppAI/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
FlamAppAI/app/src/main/java/com/kartik/flamappai/: FrameState.kt  MainActivity.kt  NativeBridge.kt  OpenCvCameraActivity.kt  OpenCvProcessor.kt
FlamAppAI/app/src/main/res/layout/: activity_opencv_camera.xml
FlamAppAI/app/src/main/res/values/: strings.xml  themes.xml
FlamAppAI/app/src/test/java/com/kartik/flamappai/: ExampleUnitTest.kt
FlamAppAI/gradle/wrapper/: gradle-wrapper.properties
FlamAppAI/opencv/: build.gradle
FlamAppAI/web/: index.html  main.js  main.ts
FlamappAiAssignment/: settings.gradle.kts
FlamappAiAssignment/app/: build.gradle.kts
FlamappAiAssignment/app/src/androidTest/java/com/example/flamappaiassignment/: ExampleInstrumentedTest.kt
FlamappAiAssignment/app/src/main/: AndroidManifest.xml
FlamappAiAssignment/app/src/main/java/com/example/flamappaiassignment/: MainActivity.kt  MyGLRenderer.kt  MyGLSurfaceView.kt
FlamappAiAssignment/app/src/main/res/layout/: activity_main.xml
FlamappAiAssignment/app/src/main/res/values/: strings.xml  themes.xml
FlamappAiAssignment/app/src/test/java/com/example/flamappaiassignment/: ExampleUnitTest.kt
FlamappAiAssignment/gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
